--- a/flutter_host_android/app/src/main/AndroidManifest.xml
+++ b/flutter_host_android/app/src/main/AndroidManifest.xml
@@ -22,8 +22,11 @@
             android:name="io.flutter.embedding.android.FlutterActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-            />
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".FlutterAppActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
